Adds support for python3 kernel and gpu optimized image

--- a/jupyterlab/Dockerfile
+++ b/jupyterlab/Dockerfile
@@ -1,8 +1,11 @@
-FROM python:alpine
+FROM nvcr.io/nvidia/tensorflow:18.01-py3
 
 # Install required packages
-RUN apk add --update --virtual=.build-dependencies alpine-sdk nodejs ca-certificates musl-dev gcc python-dev make cmake g++ gfortran libpng-dev freetype-dev libxml2-dev libxslt-dev
-RUN apk add --update git
+RUN apt-get update && \
+     apt-get install -y python-setuptools python-dev build-essential python-pip python3-pip
+RUN pip install --upgrade pip
+RUN curl -sL https://deb.nodesource.com/setup_9.x | bash - &&  \
+     apt-get install -y nodejs
 
 # Install Jupyter
 RUN pip install jupyter
@@ -12,30 +15,18 @@ RUN jupyter nbextension enable --py widgetsnbextension
 # Install JupyterLab
 RUN pip install jupyterlab && jupyter serverextension enable --py jupyterlab
 
-# Additional packages for compatability (glibc)
-RUN wget -q -O /etc/apk/keys/sgerrand.rsa.pub https://raw.githubusercontent.com/sgerrand/alpine-pkg-glibc/master/sgerrand.rsa.pub && \
-  wget https://github.com/sgerrand/alpine-pkg-glibc/releases/download/2.23-r3/glibc-2.23-r3.apk && \
-  wget https://github.com/sgerrand/alpine-pkg-glibc/releases/download/2.23-r3/glibc-i18n-2.23-r3.apk && \
-  wget https://github.com/sgerrand/alpine-pkg-glibc/releases/download/2.23-r3/glibc-bin-2.23-r3.apk && \
-  apk add --no-cache glibc-2.23-r3.apk glibc-bin-2.23-r3.apk glibc-i18n-2.23-r3.apk && \
-  rm "/etc/apk/keys/sgerrand.rsa.pub" && \
-  /usr/glibc-compat/bin/localedef --force --inputfile POSIX --charmap UTF-8 C.UTF-8 || true && \
-  echo "export LANG=C.UTF-8" > /etc/profile.d/locale.sh && \
-  ln -s /usr/include/locale.h /usr/include/xlocale.h
-
-# Optional Clean-up
-#  RUN apk del glibc-i18n && \
-#  apk del .build-dependencies && \
-#  rm glibc-2.23-r3.apk glibc-bin-2.23-r3.apk glibc-i18n-2.23-r3.apk && \
-#  rm -rf /var/cache/apk/*
-
 ENV LANG=C.UTF-8
 
 # Install Python Packages & Requirements (Done near end to avoid invalidating cache)
 COPY requirements.txt requirements.txt
 RUN pip install -r requirements.txt
 
+RUN mkdir -p /usr/share/jupyter/kernels/python3 \
+  printf '{\n "display_name": "Python 3",\n "language": "python",\n "argv": [\n "/usr/bin/python3",\n "-m",\n "ipykernel_launcher",\n "-f",\n "{connection_file}"\n ]\n }' > /usr/share/jupyter/kernels/python3/kernel.json
+
 # Expose Jupyter port & cmd
+
 EXPOSE 8888
-RUN mkdir -p /opt/app/data
+RUN mkdir -p /opt/app/data/TL_training
+VOLUME ["/opt/app/data/TL_training"]
 CMD jupyter lab --ip=* --port=8888 --no-browser --notebook-dir=/opt/app/data --allow-root
