Adds python3 support and opencv support

--- a/jupyterlab/Dockerfile
+++ b/jupyterlab/Dockerfile
@@ -2,8 +2,9 @@ FROM nvcr.io/nvidia/tensorflow:18.01-py3
 
 # Install required packages
 RUN apt-get update && \
-     apt-get install -y python-setuptools python-dev build-essential python-pip python3-pip
-RUN pip install --upgrade pip
+     apt-get install -y python-setuptools python-dev build-essential python-pip python3-pip python-opencv
+RUN python2 -m pip install --upgrade pip
+RUN python3 -m pip install --upgrade pip
 RUN curl -sL https://deb.nodesource.com/setup_9.x | bash - &&  \
      apt-get install -y nodejs
 
@@ -17,15 +18,15 @@ RUN pip install jupyterlab && jupyter serverextension enable --py jupyterlab
 
 ENV LANG=C.UTF-8
 
+# Configure python3 as kernel
+RUN python3 -m pip install ipykernel && \
+     python3 -m ipykernel install --sys-prefix
+
 # Install Python Packages & Requirements (Done near end to avoid invalidating cache)
 COPY requirements.txt requirements.txt
-RUN pip install -r requirements.txt
-
-RUN mkdir -p /usr/share/jupyter/kernels/python3 \
-  printf '{\n "display_name": "Python 3",\n "language": "python",\n "argv": [\n "/usr/bin/python3",\n "-m",\n "ipykernel_launcher",\n "-f",\n "{connection_file}"\n ]\n }' > /usr/share/jupyter/kernels/python3/kernel.json
+RUN python3 -m pip install -r requirements.txt
 
 # Expose Jupyter port & cmd
-
 EXPOSE 8888
 RUN mkdir -p /opt/app/data/TL_training
 VOLUME ["/opt/app/data/TL_training"]
